# ParsingTest

./: .gitignore  CMakeLists.txt  README.md
src/parsingtest/parsingtest/: CMakeLists.txt  any.h  parsingtest.cpp  recurse.h  root.h  sequence.h  single.h  type_traits.h  utilities.h
